--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,4 +1,18 @@
-﻿<table>
+﻿<!--Could define the style here as well.-->
+<!--<style>
+    table {
+        color: #369;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: large;
+        border-collapse: collapse;
+    }
+
+    td {
+        border: 1px solid black;
+    }
+</style>-->
+
+<table>
     <tr>
         <td>First Name</td>
         <td>{{firstName}}</td>
